--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -1,6 +1,6 @@
 <!-- Hortica -->
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" manifest="manifest.cache">
 
 <head>
     <title>Хортица | Новый поворот | Тайны и загадки острова</title>
