--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -1,6 +1,6 @@
 <!-- Stambul -->
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" manifest="manifest.cache">
 
 <head>
     <title>Стамбул | Новый поворот | Стамбул - столица тюльпанов!</title>
