--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -1,6 +1,6 @@
 <!-- СЛАДКИЙ БУКЕТ К 8 МАРТА -->
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" manifest="manifest.cache">
 
 <head>
 <title>Букет к 8 марта | Новый поворот | Вкусный мастер класс по созданию Сладкого букета</title>
