--- a/packages.html
+++ b/packages.html
@@ -333,7 +333,7 @@
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="">
+                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="Лимонарий">
                         </a>
                         <div class="rating">
                             <ul>
@@ -385,7 +385,7 @@
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-max.jpg" class="img-fluid" alt="">
+                            <img src="images/beer-max.jpg" class="img-fluid" alt="Пиво">
                         </a>
                         <div class="rating">
                             <ul>
@@ -411,7 +411,7 @@
                     <h4 class="destination mb-3">Турция</h4>
                     <div class="image-position position-relative">
 		      <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                        <img src="images/Turkey-max.jpg" class="img-fluid" alt="">
+                        <img src="images/Turkey-max.jpg" class="img-fluid" alt="Турция">
 	              </a>
                         <div class="rating">
                             <ul>
