--- a/about.html
+++ b/about.html
@@ -85,12 +85,14 @@
         <div class="container py-lg-5 py-sm-4">
             <div class="row">
                 <div class="col-lg-6 about-left">
-                    <h3 class="mt-lg-3">Мы Отвезем Вас В Лучшие Места, <strong>Путешествуйте Вместе С Нами!</strong>
+                    <h3 class="mt-lg-3">Оставить отзывы <strong>О Путешествиях Вместе С Нами!</strong>
                     </h3>
                     <p class="mt-4">
-                        Сделаем Вашу жизнь ярче и разнообразнее.
-                        Экскурсии, походы, мастер-классы и дегустации...
-                        Самые неожиданные места Украины и Европы.
+                        Наши любимые туристы! 
+                        Будем благодарны Вашим отзывам по экскурсиям, 
+                        мастер-классам, походам ... Стараемся для Вас быть лучшими, 
+                        помогите нам в этом своим мнением. С любовью, Новый поворот!
+                        
                     </p>
                     <p class="mt-3">
                         Путешествуйте с улыбкой. С любовью Новый поворот!
