--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <div class="container py-lg-5 py-sm-4">
             <div class="row">
                 <div class="col-lg-6 about-left">
-                    <h3 class="mt-lg-3">Оставить отзывы <strong>О Путешествиях Вместе С Нами!</strong>
+                    <h3 class="mt-lg-3">Оставьте Отзывы <strong>О Путешествиях Вместе С Нами!</strong>
                     </h3>
                     <p class="mt-4">
                         Наши любимые туристы! 
