--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -134,6 +134,8 @@
                                         class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
+			   <li class="mb-2 twitter"><a href="https://twitter.com/novipovorot"><span
+                                        class="fa fa-twitter"></span></a></li>
                             <li class="viber">
                                 <a
                                     href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp">
@@ -152,7 +154,7 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span
+                            <li class="telegram"><a href="https://t.me/novipovorot"><span
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
                         </p>
@@ -269,6 +271,8 @@
                                         class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
+			    <li class="mb-2 twitter"><a href="https://twitter.com/novipovorot"><span
+                                        class="fa fa-twitter"></span></a></li>
                             <li class="viber">
                                 <a
                                     href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp">
@@ -287,7 +291,7 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span
+                            <li class="telegram"><a href="https://t.me/novipovorot"><span
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
                     </div>
