--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                         мечты. </h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
-                                        <a href="about.html" class="btn mr-2">О Нас</a>
+                                        <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
                                     <h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
-                                        <a href="about.html" class="btn mr-2">О Нас</a>
+                                        <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         мечты.</h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
-                                        <a href="about.html" class="btn mr-2">О Нас</a>
+                                        <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
                                     </div>
                                 </div>
@@ -172,7 +172,7 @@
                                     <h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
-                                        <a href="about.html" class="btn mr-2">О Нас</a>
+                                        <a href="about.html" class="btn mr-2">Отзывы</a>
                                         <a href="booking.html" class="btn">Заказать Тур</a>
                                     </div>
                                 </div>
