--- a/page-Beer.html
+++ b/page-Beer.html
@@ -91,7 +91,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>14 и 23 Февраля 2021
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>23 Февраля 2021
                                         Года</span>
                                 </li>
                             </ul>
