--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                         <ul class="social_section_1info">
                             <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
-                            <li class="mb-2 vk"><a href="https://vk.com/id82718471"><span
+                            <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
                                         class="fa fa-vk"></span></a></li>
                                
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
