--- a/page-Beer.html
+++ b/page-Beer.html
@@ -135,7 +135,7 @@
                         <ul class="social_section_1info mt-1 mb-1">
                             <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
-                            <li class="mb-2 vk"><a href="https://vk.com/id82718471"><span
+                            <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
                                         class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
@@ -252,8 +252,6 @@
     </section>
     <!--//single page-->
 
- 
-
     <!--footer -->
     <footer>
         <section class="footer footer_w3layouts_section_1its py-5">
@@ -281,7 +279,7 @@
                         <ul class="social_section_1info">
                             <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
-                            <li class="mb-2 vk"><a href="https://vk.com/id82718471"><span
+                            <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
                                         class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
