--- a/packages.html
+++ b/packages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.cache">
+<html lang="ru" manifest="manifest.appcache">
 
 <head>
     <title>Туры | Новый поворот</title>
