--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -1,6 +1,6 @@
 <!-- Лимонарий -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.cache">
+<html lang="ru" manifest="manifest.appcache">
 
 <head>
     <title>Лимонарий | Новый поворот | Экскурсия в Лимонный сад</title>
