--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -1,6 +1,6 @@
 <!-- Турция -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.cache">
+<html lang="ru" manifest="manifest.appcache">
 
 <head>
     <title>Турция | Новый поворот | Походы по Турции</title>
