--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title>Отзывы | Новый поворот</title>
