--- a/booking.html
+++ b/booking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title>Забронировать | Новый поворот</title>
