--- a/page-Beer.html
+++ b/page-Beer.html
@@ -1,6 +1,6 @@
 <!-- Пиво -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
