--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -1,6 +1,6 @@
 <!-- Карпаты -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title>Карпаты | Новый поворот | Походы в Карпаты</title>
