--- a/page-LOL.html
+++ b/page-LOL.html
@@ -1,6 +1,6 @@
 <!-- LOL -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title> ЛОЛ | Новый поворот | Праздник в стиле Лол | Игры и танцы, роспись пряников, любимые персонажи</title>
