--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -1,6 +1,6 @@
 <!-- Odessa -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 <head>
     <title>Одесса | Новый поворот | Одесса на 8 марта. Морской привет! </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
