--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -1,6 +1,6 @@
 <!-- Cofe Isla -->
 <!DOCTYPE html>
-<html lang="ru" manifest="manifest.appcache">
+<html lang="ru">
 
 <head>
     <title>Кофе Исла | Новый поворот | Экскурсия и дегустация кофе Исла </title>
