--- a/404.html
+++ b/404.html
@@ -174,7 +174,134 @@ p a:hover{
 <body>
 <div class="wrap">
     <div class="logo">
-        <img src="./images/404.png" alt="404"  />
+	    
+	    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="425px" height="214px" viewBox="0 0 425 214" enable-background="new 0 0 425 214" xml:space="preserve">  <image id="image0" width="425" height="214" x="0" y="0"
+		    xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAakAAADWCAAAAABORCInAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
+		AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAJcEhZ
+		cwAADsMAAA7DAcdvqGQAAAAHdElNRQflAhQSKxhVWKEYAAAaMklEQVR42u1da3fcOI4FwLJdsZ34
+		0Xmnk+ndPWf//x/as9Odh1Nx4le5bNlVAPYDSb1KZaskUlJljZmT6fbEFHWvQIIACKDCk2yEUN8T
+		eJKa8sTUpsgTU5siT0xtijwxtSnyxNSmyBNTmyJPTG2KPDG1KfLE1KbIE1ObIk9MbYo8MbUp8sTU
+		psgTU5siT0xtioxiP2B2dTeD3fHhs77fdICyFjYYN+Y7O71FRFCVZx+24796Mk/mC763/0I7sEO7
+		YxP/sZ1gE5UpPr0gIARQVYF/xVWr2c3tLYL9DwAAKIAqwGh7d3cc9cndYBOTKf57ToR2NsIxqeLp
+		9a0CISAieKZAQUFVVQH3nj+P957dYBORKf5nTkSEiKoqzEL/FWclml5fISIhotMoS5WCZQpUVBX3
+		DvaivWoX2ERk6n/nhgwhgZsN8/GbCO98ec5IlijAHFEZVaqqKqrm6GAom1YDbOIx9e3aGEOEYDVc
+		eMH436EfwmcXSkiEVsDRhAAKYP9wZImKCr443or1vrGxiWalT66NMWSAEABUCJSEr/eDPoPPLpQM
+		2YUvt/Klq5+1KhBUlVRU5PLi+av+uWqETSymLi+NMcZBCAqCiIizoEyd/VIyRLmFL7f02X9Sb1eA
+		KqmIymx6fNzzGtgMm0hMJRMyxn3tAKCYLU+hZPZjToasAYXLPFlBBfRMgSIJEp9fvDqM89ZRsYnD
+		1PwzmfRrB7cbBuWJf17iKOMpPUZVPQMVrRFolERQ5MfV6/5OWE2xicIUfwVjyLhlye3u6f+EkOQr
+		G3J2rjf5qlkCAEVARVVQVSQR4bu/j1/FePGY2ERh6sfcGEP+W88mo6E2iLNTGhEZJKClda/wzqkl
+		iFa1VBURUfj8+s9+LIvG2MRg6nQ6MmRtZwuVP9NomLMnT66NIUOISIUjlOb+BAB/BkEAtIoFqCoG
+		EZEX/37bh9uiOTYRmJqeG2c6g0fOOQpGQXaH+Ze5JwpzPHmj3P+zVyVABUBAUEBUQBSyanVyE+Eg
+		Hg+b8EwlE7tj+mUpd/I8DDL+Zxg5my/jyR1x0z8A/Mkq3bURQQEBgOwKCHh596Fje70NNsGZ4m9Q
+		wNFOB0RFtl8HGH/6HYx729Qdq+nHCeoXfgQFy5RzXSgguv1KhRCRIfnnU6dUtcImOFNfeWRMZtpY
+		CFVERN8FGP7iBxlDBpFShUpPt+pPuY4kQLfeAaJiuvwBAKkYBMTF3++7NNdbYROaqZ/JiCgzbVL9
+		FpbjAKBc/MhOjSlP9mCrPsTh1cqqkzPjERxXoICACkqAAPz5Y3dUtcMmMFPTM1P6auwyLCLjACeY
+		SqIyf7mqWN0C9QsfIiISqHffKqICKpIKAXRKVUtswjKVTLwjLvuZ1W+GD+2HLxKVrR8+rCEqqrpD
+		Niond4uFJUoISR25ai12ALILIX/+q5uDVVtsgjLF3yHd7IufDcu79nv3bGKMc8RAOr6NbouoiIo8
+		29/ZzU/o5na2QCIhRVICQPVqBQAkBgD4SydmRWtsgsanvtyOKvRbhBeLg/Znl+QzFonKFEpERGR0
+		+KLilZOrK6XU85StmlYPmZlHXVDVGpuQOnV6U7Fjigozb7cnir+CjRWUiBIQEWEZ/7Fb+Xvj8evL
+		swUZVSIlSP0VmVbNJ+8DohALm4BM3Zxnzvw0QG6/GwywSX1l6ztPlz5HlIoIi3m3u/pXDw48V4IE
+		dg30VBGouT6N7a8NgE04pubfbLgo3THzC3H7Tfs08ZYT5G1cUWFhPn758G8f7J+fKRklEgLUjCok
+		MKDnu3GzYUJgEyzbmb+Wzt+508JBe1/o7NxtUQSFdV6ZeTH69PKx3zcvP42Y2Voe1ueEgIiERGTo
+		G4fCIRo2wZj6MaeCfucW4q0Am9Q3IhvQLmiUKjPz7p91jkTjP/cXzCyq4py5jipjDMHXUDhEwyYU
+		U2fTog2aM25CbFIn+YwJKJhui/339Uw38/b1YuGo8j5cREQgMpScBQIiGjaBmEp+Zt58H4PwC/Gb
+		9pvU9MaYvOVk39Xa2C/f1h7m4E+1WmV9hLkF0NCveRgkomEThin+nPPmZ0CqMHOATYpPqeyC9u/K
+		R0drDLTrqBJPFQAgIhERTIIgEQ+bMEx9XrFjsvA4QLjubEHuXbNYgSoIMz9/1JYoyLhEVU6pbqZB
+		oIiGTRCmTuZZ/lrR9xjE3Tc/o/TUaCUdfrf+0mdl/KeyiKp3uDsvLhHhjxBQxMMmBFOXU/vJU+5Y
+		Z5N4WWru9g/KpGhNuECHCPPWukQBjN8IM2frn3W5E5HhGEZFOGwCMJVMTNFJrKAq9kj6MsCJcnbj
+		s8XSm1HWQBd+0+A7eP6SRQQytQJr/xH9Cn+oCohNe6ZWHHVARHj3OMDb/kLvXfUvCyqqLPyyUWjp
+		aJdFRLPYsF//NLhShcSmPVNf2SwfdaxdZkLE45PE51/mzQkVkXHD7+AtsEgWHEYAJCAiugitVCGx
+		ac3UJDG0fNRRYRYIsUnBGaapsv5H7qtcf5OyYt6IiKhkWUwIhEik1wHmGwubtkzZewv5TMPsqPMq
+		RNx7Ps3ykKz4gFTzq1DPd93xN1MqBEKinwEmHAublkwlp1U7pvU9Pj8I8boX7mJo/k6oggrDOkfe
+		krwGa1TklAqRkHgWYspxsGnHFH+HSsepMPNWiE0K4IqISkufVanDFkvr1qG1KQpKhYR4FWTOUbBp
+		x9TJfMWOGcYvCwAJe/u8qFKCLVQK4AhEi0pl7b+rcDZFaGxaMfXzprxjukgms7wPk/FzaYO8WT6P
+		VSltpVIA5tDa6XmlQkLEyyCzjoFNG6bKCWxZ3EX4aLfFwDmZLd3Ys9tyO5UCOBIbUfTiXBXBmAqP
+		TQumlhLYskgm7wZKTEgWWHBP+LQx2W95ADAv1HqUrHii6D5M8CMCNs2Z4u9gqCqBjVkCWRMAUyhk
+		MmYPOWw78p7k4lQA4DOjg1h/MbBpzlRlyNnlhL4NlUB3TeXVTxVUZaf1Ue05Wo3KaxUgYpDDbwxs
+		GjO1HHLORTJDpXrzffFSuboziQS4Trhfvm1gDcDbANOOgk1Tpm7SkHNxx2RmPg52LTOxW1TenLBU
+		BXjCs4JFAd5Vq+03qjjYNGRq/i0NOacQpk7i9cKwD74z5Ers2OcoqOpOgCPArsuUzuiyH8V924Ej
+		YdOQqa9aEXIWZQnmmwAAgDv0t6Cyn6lqCJWCra3CRmW/CES4aTtwJGyaMVUZcrY2aDhrAgCk4EfK
+		bkoFOaxtq6vV6MRdcpSWw8bCphFTl27HLIacA1sTAAC3RXVyF+MVgzxjJxf2tYKAiHftRo2GTROm
+		kolX71yukIS2Jix0gOVKNaq6E2TwnZJFkT2zhcTDpgFT/JlM6iT2k3E75jicNQEAs6V6QtYECFMl
+		1bjSV+kPrPHXap+KiE0DpioT2FzIOYwDPS92o8//RAMlKe5kRUZyz2onEbFZ/6UnK3bMYOH4vJRX
+		PvusMFuhAV1e/bAVXTGxWZupy0tatWOGCcfn5GapEJxVg3CNE1yNhJwgNA9RRcVm3ZeuDjnbHfMg
+		SDi+JMUKwACgCoE+iK0iRf6InTQdLy42azLF32BlAluIDPSyFMtg5j2qAWQUcrDo2KzJ1EMJbFGs
+		ieVdQwOZfn64YCNFxmY9pn6WEtiiWhOwzJMGVQLIysxlT2xsUMTGZi2mfMi5C2sCAKpccKoBtSAk
+		79GxWYepNOScvWlca6JSFEKtfu5mdibW1GykVfGxWYOp6noy8ayJ6BKwXlIH2KzB1Mm8UJQ4sjUB
+		sMpnEGzNKjPlHtckk6IDbOozdXrTrTWRBy8VBQ3lTKr1vAFhU/utq+rJxLQmHsBucH2/OsGmLlOV
+		9WS6tiY0rLkWSrrBpiZTK+rJxLYmKhejiFY6Nln/OsKmJlOr6snEsyYqZal0/RCkI2zqMVVOYPNJ
+		x1GtCQBo+JV3Kl1hU4uppXoyEPji4RoyMIXqDps6TFXXk7G1tLrzTXiJS9W6CtwdNnWY+rxix2Th
+		Z/F9E50vfms9sDtsajC1sp4Ms4lbwHVF9LWDZtt1pUNsHmeqXE8mt2MGqbXzgKxIPO6/JWUf2DzK
+		1FI9Gch2zKBZmBsonWLzGFP8LZfA5vU7aBmD9WRIpl+32DzG1DdeUZ0u7FWBVTLos1S32DxShXty
+		OyJTUZBdhOHjo4Pfz4GCJj0MSjrG5mGmLi+tk3h5x2R5rMXC7GKqgKo7h80LEhRzZ4e08nWPzYNM
+		LSWwQe0d83ZySwQIoHx6+jJotvowpHNsHmKqMoGt3o55PkFDtq26op4mATrlDEu6x+Yhi6Iyga3W
+		jnl+gjQamdFoNBqZEZnrz30jG1q6x+YBpiZVCWy1dszkZGRGJv3vyFBy0je0YaUHbFavfuXqdGvs
+		mF8NGkPkWwghAFy8iNvjpFvpA5uVTKU7Zu5nNXfM83tjiAwiIiiIAVXV09+IqV6wWcVUtmPi2ufv
+		KVH+BqUSgMrt/YAcq+2kH2xW7VPNd0yAGdped4T+CI9EFKnEfw/SDzYrmDptvGMCzKxv2VuwiEiE
+		iNE6nHQtPWFTzdT0fKn1bLpjfnzU/Ee/LrgKD7bzceMLZAOTvrCpZGr+nVacv6WON993pk7/BfI9
+		OTZcesOmkqkvFdXp7I7Jtbz5xSdjscTnhktv2FQxNZkXa2k18OYv1yb4TYjqD5sKpqaXq/vwPO7N
+		/72lR2yWmeLcQlwuSvz4jgkAlZfFfo/Vr09slpk68QtxoRWFCtfaMVdMrwMUu5A+sVli6uyGqPJy
+		Xc0d83eWXrEpMzX/VS5TkjZzbpcb8BuoVb/YlJnK9LvU6U5CdDzcbOkXmxJTF4lzIBaKntmFeDgJ
+		kf1Iz9gUmeJTWi4fbY3QddvyYuEff4O1r29sikz9VCo1UFNXRHW7fjr8sh36G/DUPzYFppJLQ0SQ
+		L3/h+kfCWunwuPypbLzbr3dsCkz9wEJOqJ2Pgqqu1ekOl89ym87TALDJMzVL0hvgpaLs47V6CFU5
+		hzfdl94/Nnmmyo1zU9E/1norxNKmiZsf9egfmxxTsyTt8lmq0Lu7Vtnr+4JbzE+GWtYh71cGgE2O
+		qUsodvnMhttf660YqfyVICBS2+L+fcoAsMmY4mm5y2c61lqFihYzO0rp0EB0GQ/I2DIEbLIssqlT
+		7tJ0EAHv6vuJ54nrQVlcjkmQrmB/U90cQ8AmY+oaiKoiJah4fUWk+riG4oKJbN5O4cdgv73ppezk
+		r9YoKOh4d6/m7QLs71bOELDJMWXQZ86UBgICYS031qqYDOIInbM5NwoqICAQINLcVyf1dXX07gKO
+		/6gZhOuNqiFgkzKVrEq8QAQgVKUas4E0m60wGCogACkq5evIqgsbnF18HPbNxUFgkzLFVVkyqAiK
+		djx9uFq5y+Nw397SKICqgq7gb24+KiSgf/+rmiqtfEznMghsUqZmWA2EHUhRa2FkEw2XXSYIAECg
+		S3XqlQSR5e//rM7MHsaF0UFgk7tBUHVStroJqDXq/6PvF7Xkg0QFVLRfYTYMAiiCIiIAf/2PHhio
+		LwPAJsdU5Y3ndDpplHP1XMDvskvfH4KfTGkYBUUEVU1m9W/trPFXQ8kAsEmZ2juvfhxatbR212Na
+		jrDqb60YRkGFAFT1196q4TqVygKqg8CmoFPVS66luh5q+Mj/VR4GFUgQSSpbqY1bd2xtPNuSDACb
+		TKd8d9vq/THQ573kiXYZ9Ah6u8JSL33KffjkB4FN5rbadm2IQzbOqDk7RGzToCu+DAGbjKldFVEV
+		yXdj707qPbGvGNcQsMmYOhYREVVRTTscx56C632sqqArD1TlWQRb/5ZvAq4qyD4EbDKLYvvFtbA1
+		PWse5VbIyt/Vqp/Y/B4FqnEpObDjr/591iFgk7P9Xk0FEYEE0/PZesi4hVWrZlRwPeZ/rKIiKlIZ
+		kVsuPY9rIfzYfKunWSEDwCbH1Pab7wBq1Kddr/nt2DO287uUPzyXcpWflJ+NCgurvF4x7JLtisGY
+		KvsL3LyqlHsA2OTrURwlF6Cg6tyR6y81COgM2dIa4e0mXdoIVEWEhY+q8InRbnxprKXhKkN6/WNT
+		qBzybvxd1ader/BKPjQZteGWbFL5yaj3FRc/G1Fhka3X6zwopCwp1QpboXdsijVejp59T1T8tZNc
+		Ck3N6aDPXStMx9cBSGeU4aK2qczWf9StKoeAeNuCmLysl4LTNzalajzjv2ZnMxQoTqfmbGxGFJLS
+		0q9YA1cK03GzUZGXKzRqq+xNaml5leRutDzYA9Z3z9gs1U3a2+PZ3Z3w/dr7AQIioaIaofwraJpq
+		L+5Akp+ljg7+WGWgb1VuU7hYc2KPzruu9IpNRYUr8yL3L0ltJw8CANwpJgsw6gIs2UNFhWl/a2Sn
+		l5PxA+uelprCogJgOCsdIL/h1DISesTmkdrO63a62wWAH3dYjGCqgoLI6G2TBoeambUuLICYBKka
+		n5S8HT6QV3vwbrGJ0B3ymfdm5kBQUTla+1mmfMRw+UFhlEpsFLa4kKlCzJK5LbCJwNRIRMsHA1CR
+		9fOPdio3+FDG37wiyxxqroI9YBOBKS27nK0H67F1dtVokDfI7MEzEFNLRhiogkbN822BTYzeuCUT
+		xnkaGzxpXKVTiHgXJJZ1X3UhRh/dufvCJg5TBXzdyb/BVQ/jYgzpD9CZuzfrj7Usd4jLbp3Guh8d
+		myhMLTvsGgZLnxV/DT1VTRqOl2W+QMz507WT1a8FNlE6gxeTQe2PGjG146N2hY0K8TrAJK/T6pV+
+		0nbiuzEQCYBNDItiyYRqbE7tuLWvMAAhaYC7WFdUTOZ3AVaN2v2sBTZRdKo8vca/uedj1F4Qrfvs
+		qvWkkvsiTQDWJ7rdbQeS+th0wdRaEyrI1rY3KOwA6C5NUNLaprhIL+66GTqJvPg1x6YjpprKrpTy
+		S3zp6rZKNb8qX9xVBVWBwVbGGzhTByBSPCr65a+lUv2iwi1D9UcbM9gmnQNnamysQmm2/AEiEplf
+		rcadX1HxbrSN54m8aDVsTBk4U3AkIiUzHRAJKWnVfeJHeuXWX7CwwTw47PuFV8rQmXruwqEFmwKR
+		iCYtXEo3s0p7QmR3uLf7h87U1guRkk1hmTJw2nhQnqRdiTKVAhXVtWogdStDZwpeqLcp8jsVEdG0
+		8fp3viDb5KugUqJiBtwka/BM7Y1tSngp8kFkaNIwonhzZkypnqwqiIqsV62qWxk8UxVKZe10MvCt
+		0VbFk6wrkRWfdDI67PtlH5DhM3VoUqXKqxURmfn3JgN+Z8o3fNgQldoApuCtOqbSe+XWqDDG3DSg
+		6uyGCk0O1SXWiYwG658A2Aim9sYpUdn6R1arpj/XHW3605h8RzZw2avCctz3mz4oG8AUvFbhcuIi
+		IqExxpyvGf9IJsWuRGl5epGtw75f9EHZBKbGBywiUFj/rKPCGPPjbJ2hki+Y2n0A4K6+iIqI9naJ
+		oZ5sAlPwEoVFSuufPf8a82uN9ts8gaq2oSDCvD/gsxTAhjBl3kopcTsz1Y25rm1W8Je5b3ucq6Vt
+		1z6sX56+H4mbiRNKnl/eICKppvfEUBGAhAAApkm9Ll3JCduObJRtUmm3m3fdxnrXl43QKYB3yMyr
+		tGq0+FKnzWryRUaOKPcT30NFmHfXbM3RvWwIU+a9cnqqKlJljDHzL4/7AC//QWOs2QfFJofMjK36
+		R3Uim7H6AewdnTOi/bIKC6CKQUA+uXl4n+HT6YgMGUSkElEiLH8Ofe3bHKbg1d0NAqCUqQISAgS8
+		uv3wQGxpNmFjyC19SxolrwZu9wF0uPq1vkLxbouZuXDL0qe/GGOMmf975QrIk68ySvcoBPTJfVaj
+		eL9n70R/ObRRxHwCZlmmigiRjBmN8GRFbDH559KM7B6VEgWp1ce8tVZbor5kc5gC87GSKkBydgWd
+		/7sqDHL+z9x4ntxBKk/UYutT329WS7phKsztsfFHWOSociUm7QKIZIyhu7+XqTqfgDHG+ZBs8NC5
+		zz1R/VoTdbGJc4Ogql5TALbGH2HBzJoPV2GaAmiMofmSVl19t/pml0lPFKhYY6Jzohpjs0GrH6RU
+		ibrUMgWfVkaERGTwvuQF5G9E+S0KXa6siDLzoneNqi+RmCre+Qwn44/AGVWpWrnNiojosqhUP4CM
+		b5uX26JUlIWZn9cuLtM7Nh2sfr46RpChx3+NFoUV0Bb5cq51IqTiJeApEaZJE+hv3oio8GLBB927
+		JhpjE+dOImS55GntpkAatvVpzLxgFuWMK9+OARGxcF+RGdBvUYhWocRtUSxvuvefN8cm0j3ftOyC
+		L9EpECo71XzaZ3Zq5bcrzW6WFi/EJ8UUpDSxj3mx0A895E00xyaCN2msIiRGQdHfDQ971+/9xSmr
+		UXUJy4reoKuQwvXQrEoRs2y97eFaRwtsIjBltlmFVEgQrWqLiEhA19rh3kmiZBSJFNFWYVO/jpSf
+		o7aaj7vGqwK2vOFuLwGpFtjE8NAeTxAFScj7AkREt0N+wVufzn4tlMjXsES1RTmkXNvBLzaC1tcn
+		YH3ncvQqwotHxSYGUy9OBRmABNCeMZlFAiNz/Pz0WsjZ37a8l4qoKBYL21iWSO0n7MpQMn7oy3ne
+		HJsYTJm3XxHA9eRRUWaWvdBXyLbez34lQkRC6HWKWaQYu90WySrH+gxM6Wfla4lNlPjUi9kFgBIh
+		gtptYetD+Kfs7VmuLBeeqWIu2PazOxIARYQst+Vln0GOxthE6hJ5cuHbtKuoyNZfkT7i2a/EtR50
+		lZDfvCz+hfv/AYMGCb1K6fM3PfuPGmITq5/n1TewtzNVlY9exwMnOZupf5DI0VKo6fYfNkjuL6iO
+		X/Yf3m2GTbTOq/zrgu2KvP+6RiOINk+aXt8IAKg8e13RyYB/nttdART3D/rnqSk2MXvk3s9nsLXd
+		CTbJfaJ726veejZLBGg8HtDF+PWx6bHx9JOsJZsVn/r/LE9MbYo8MbUp8sTUpsgTU5siT0xtijwx
+		tSnyxNSmyBNTmyJPTG2K/B8bjjx8zzx/GQAAACV0RVh0ZGF0ZTpjcmVhdGUAMjAyMS0wMi0yMFQx
+		ODo0MzoyNCswMzowMIMB4h4AAAAldEVYdGRhdGU6bW9kaWZ5ADIwMjEtMDItMjBUMTg6NDM6MjQr
+		MDM6MDDyXFqiAAAAAElFTkSuQmCC" />
+		</svg>
+	    
+        <!-- <img src="./images/404.png" alt="404"  /> -->
         <p><a href="https://novipovorot.pp.ua">Вперед на страницу туров выходного дня "Новый Поворот"</a></p>
     </div>
 </div>
