--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-                    <img src="images/novi-povorot.jpg" alt="logo" class="img-fluid abt-image" />
+                    <img src="images/novi-povorot.jpg" alt="logo" class="img-fluid abt-image" style="width: 60%;">
                 </div>
             </div>
             <div class="row mt-5 text-center">
