--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
                         Путешествуйте с улыбкой. С любовью Новый поворот!
                     </p>
                 </div>
-                <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-                    <img src="images/novi-povorot.jpg" alt="logotype" class="img-fluid abt-image" />
+                <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5" style="display: flex; align-items: center; justify-content: center;">
+                    <img src="images/novi-povorot.jpg" alt="logotype" class="img-fluid abt-image" style="width: 60%;">
                 </div>
             </div>
 
