--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -83,7 +83,7 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row">
 
-                <div class="col-lg-4 main-title-text">
+                <div class="col-lg-5 main-title-text">
                     <h3 class="title">Букет к 8 марта</h3>
                 </div>
                 <div class="col-lg-8 blog-left-sub">
@@ -385,7 +385,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    
 </body>
 
 </html>
