--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -81,7 +81,7 @@
     <!--single page-->
     <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
-            <div class="row">
+            <div class="row df-cntr">
 
                 <div class="col-lg-5 main-title-text">
                     <h3 class="title">Букет к 8 марта</h3>
