--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -147,7 +147,7 @@
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
 
-                        <ul class="list-group">
+                        <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
                             <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
                                     class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>
