--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -149,8 +149,8 @@
 
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
-                            <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>
+                           <!-- <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>-->
                             <li class="list-group-item"> Средиземное море и античность <br /> <span
                                     class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
                             <li class="list-group-item"> Горы, озера Даламана и море <br /> <span
