--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -143,7 +143,7 @@
 
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
-                            <li class="list-group-item">
+                           <!-- <li class="list-group-item">
                                 Карпаты с комфортом. Ночевки в пансионатах Яремче (Микуличин, Буковель и Татаров)<br />
                                 <span class="fa fa-calendar mr-2"></span>Дата: <span>12.02.2021 -
                                     14.02.2021</span><br />
@@ -171,7 +171,7 @@
                                 <span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span><br />
                                 <span class="fa fa-map-o"></span> Расстояние: <span>25 Км.</span><br />
                                
-                            </li>
+                            </li> -->
                             <li class="list-group-item">
                                 Горганы 2021: горы Хомяк и Сыняк<br />
                                 <span class="fa fa-calendar mr-2"></span>Дата: <span>26.02.2021 -
