--- a/index.html
+++ b/index.html
@@ -747,6 +747,23 @@
         });
     </script>
 
+   <script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "Organization",
+  "name" : "novipovorot",
+  "url" : "https://novipovorot.pp.ua",
+  "sameAs" : [
+    "https://vk.com/novipovorotppua",
+    "https://www.facebook.com/284598912231286/",
+    "https://www.instagram.com/dovgalyv.zp/",
+    "https://t.me/novipovorot",
+    "https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp",
+    "https://twitter.com/novipovorot"
+  ]
+}
+</script>
+
 </body>
 
 </html>
