--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот', Одесса на 8 марта. Морской привет! тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых | Одесса_из_Запорожья">
+        content="Туры выходного дня 'Новый поворот', Одесса на 8 марта. Морской привет! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Одесса_из_Запорожья">
     <meta name="keywords"
         content="Tуры выходного дня 'Новый поворот', Одесса на 8 марта. Морской привет! Туры выходного дня_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
