--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -6,7 +6,7 @@
     <title>Карпаты | Новый поворот | Походы в Карпаты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы в Карпаты, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы в Карпаты | Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы ">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы в Карпаты, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
     <meta property="og:title" content="Карпаты">
