--- a/page-LOL.html
+++ b/page-LOL.html
@@ -6,7 +6,7 @@
     <title> ЛОЛ | Новый поворот | Праздник в стиле Лол | Игры и танцы, роспись пряников, любимые персонажи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Праздник в стиле Лол! Игры и танцы, роспись пряников с любимыми персонажами! тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Праздник в стиле Лол! Игры и танцы, роспись пряников с любимыми персонажами! ">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Праздник в стиле Лол, Лол_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье, " />
     <!-- Open Graph data-->
     <meta property="og:title" content="Праздник в стиле Лол!">
