--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -6,8 +6,8 @@
     <title>Хортица | Новый поворот | Тайны и загадки острова</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Тайны и загадки острова, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Тайны и загадки острова, Хортица Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Тайны и загадки острова Хортица, экскурсии в Запорожье, мероприятия Запорожья">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Тайны и загадки острова, Хортица Запороже, мероприятия Запорожья, афиша Запорожье, экскурсии Запорожье " />
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Хортица">
