--- a/page-LOL.html
+++ b/page-LOL.html
@@ -33,6 +33,10 @@
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
+    <!-- owl-carousel -->
+    <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
+    <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
+    <!-- //owl-carousel -->
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
         rel="stylesheet">
