--- a/page-LOL.html
+++ b/page-LOL.html
@@ -385,6 +385,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 
+    <!-- owl-carousel -->
+    <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
+    <script>
+    $(document).ready(function () {
+    $(".owl-carousel").owlCarousel({
+        items: 5,
+        loop: true,
+        nav: true,
+        margin: 10,
+        autoplay: true,
+        autoplayTimeout: 3000,
+        autoplayHoverPause: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 3
+            },
+            1000: {
+                items: 5
+            }
+        }
+    });
+});
+    </script>
+    <!-- //owl-carousel -->
+
 </body>
 
 </html>
