--- a/page-LOL.html
+++ b/page-LOL.html
@@ -248,7 +248,7 @@
                     <img src="/images/LOL/lol-4.jpg" alt="LOL" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <video src="/images/LOL/lol-5.mp4" alt="LOL" class="img-fluid abt-image" controls/>
+                    <video src="/images/LOL/lol-5.mp4" alt="LOL" class="img-fluid abt-image" controls></video>
                   </div>
                   
                </div>
