--- a/page-LOL.html
+++ b/page-LOL.html
@@ -250,7 +250,9 @@
                   <div>
                     <video src="/images/LOL/lol-5.mp4" alt="LOL" class="img-fluid abt-image" controls></video>
                   </div>
-                  
+                  <div>
+                    <img src="/images/LOL/lol-6.jpg" alt="LOL" class="img-fluid abt-image" />
+                  </div>
                </div>
                <!-- //owl-carousel -->
 		       <!-- liq pay -->
