--- a/about.html
+++ b/about.html
@@ -237,6 +237,15 @@
                   <div>
                     <img src="/images/feedback/feedback-17.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
+                  <div>
+                    <img src="/images/feedback/feedback-18.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-19.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-20.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
                </div>
                <!-- //owl-carousel -->
                <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
