--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
-    <!-- Open Graph data-->
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+
+     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Свяжитесь С Нами">
     <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
     <meta property="og:type" content="website"/>
