--- a/about.html
+++ b/about.html
@@ -247,6 +247,9 @@
                   <div>
                     <img src="/images/feedback/feedback-20.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
+                  <div>
+                    <img src="/images/feedback/feedback-21.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
                </div>
                <!-- //owl-carousel -->
                <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
