--- a/page-Beer.html
+++ b/page-Beer.html
@@ -180,7 +180,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>17:50</b> - сбор группы и после минутки
+                                            <b>17:50, 23.02 и 14:50, 07.03</b> - сбор группы и после минутки
                                             позитива пешая прогулка до места начала
                                             экскурсии!
                                         </p>
