--- a/page-Beer.html
+++ b/page-Beer.html
@@ -91,7 +91,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>23 Февраля и 7 Марта 2021
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>7 Марта 2021
                                         Года</span>
                                 </li>
                             </ul>
@@ -180,15 +180,15 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>17:50, 23.02 и 14:50, 07.03</b> - сбор группы и после минутки
+                                            <b>14:50, 07.03</b> - сбор группы и после минутки
                                             позитива пешая прогулка до места начала
                                             экскурсии!
                                         </p>
-                                        <p><b>18:00 - 18:40, 23.02 и 15:00 - 15:40, 07.03</b> - экскурсия
+                                        <p><b>15:00 - 15:40, 07.03</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>18:40-19:15, 23.02 и 15:40 - 16:15, 07.03</b> дегустация 6 видов
+                                        <p><b>15:40 - 16:15, 07.03</b> дегустация 6 видов
                                             вкуснейшего натурального пива. Сваренного
                                             на уже полюбившейся пивоварне: травяное,
                                             пшеничное, облепихово-медовое, синяя
