--- a/page-Beer.html
+++ b/page-Beer.html
@@ -245,10 +245,8 @@
                                 <ul>
                         </div>
 			<!-- liq pay -->
-			<!--<div id="liqpay_checkout"></div>
-				beer-1.jpg
-                                 -->
-				    <!-- owl-carousel -->
+			<!--<div id="liqpay_checkout"></div>-->
+	       <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
                   <div>
                     <img src="/images/Beer/beer-1.jpg" alt="LOL" class="img-fluid abt-image" />
