--- a/page-Beer.html
+++ b/page-Beer.html
@@ -249,34 +249,37 @@
 	       <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="/images/Beer/beer-1.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-1.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/Beer/beer-2.jpg " alt="LOL" class="img-fluid abt-image" />
+                    <img src=" /images/Beer/beer-2.jpg " alt="beer" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-3.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-3.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-4.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-4.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                  <div>
-                    <img src="/images/Beer/beer-5.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-5.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-6.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-6.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-7.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-7.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
 		  <div>
-                    <img src="/images/Beer/beer-8.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-8.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
 		  <div>
-                    <img src="/images/Beer/beer-9.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-9.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
 		  <div>
-                    <img src="/images/Beer/beer-10.jpg" alt="LOL" class="img-fluid abt-image" />
+                    <img src="/images/Beer/beer-10.jpg" alt="beer" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/Beer/beer-11.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
                </div>
                <!-- //owl-carousel -->
