--- a/page-Beer.html
+++ b/page-Beer.html
@@ -281,6 +281,9 @@
                   <div>
                     <img src="/images/Beer/beer-11.jpg" alt="beer" class="img-fluid abt-image" />
                   </div>
+                  <div>
+                    <img src="/images/Beer/beer-12.jpg" alt="beer" class="img-fluid abt-image" />
+                  </div>
                </div>
                <!-- //owl-carousel -->
                     </div>
