--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -82,10 +82,10 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <div class="col-lg-8 main-title-text">
-                    <h3 class="title">50 оттенков кофе Isla</h3>
+                <div class="col-lg-8 col-xl-9 main-title-text">
+                    <h3 class="title text-center">50 оттенков кофе Isla</h3>
                 </div>
-                <div class="col-lg-8 blog-left-sub">
+                <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
