--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -82,10 +82,10 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <div class="col-lg-8 main-title-text">
+                <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Карпаты</h3>
                 </div>
-                <div class="col-lg-8 blog-left-sub">
+                <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/karpati-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <h4 class="mb-3">
