--- a/page-LOL.html
+++ b/page-LOL.html
@@ -85,10 +85,10 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <div class="col-lg-8 main-title-text">
+                <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title"> ЛОЛ</h3>
                 </div>
-                <div class="col-lg-8 blog-left-sub">
+                <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/lol-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
