--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -83,10 +83,10 @@
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
-                <div class="col-lg-8 main-title-text">
+                <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Букет к 8 марта</h3>
                 </div>
-                <div class="col-lg-8 blog-left-sub">
+                <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/eight-march-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
