--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-    <title>Кофе Исла | Новый поворот | Экскурсия и дегустация кофе Исла </title>
+    <title>TicToc pati | Новый поворот | Экскурсия и дегустация кофе Исла </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы ">
@@ -82,7 +82,7 @@
             <div class="row df-cntr">
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title text-center">50 оттенков кофе Isla</h3>
+                    <h3 class="title text-center">Tic Toc pati</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
