--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -85,7 +85,7 @@
                     <h3 class="title text-center">Tic Toc pati</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/TicToc-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
