--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-    <title>TicToc pati | Новый поворот | Экскурсия и дегустация кофе Исла </title>
+    <title>TicToc pati | Новый поворот | Праздник и мастер класс по пицце  </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы ">
