--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -90,13 +90,13 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>9 Марта 2021
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021
                                         Года</span>
                                 </li>
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                           Кофе Isla. Экскурсия с вкуснейшей дегустацией...
+                           Праздник и мастер класс по пицце!
                         </h4>
                         <p class="txt-alg-jf">
                             Ароматный, манящий и бесконечно вкусный запах кофе, если Вы Кофеман, это ваш день!
@@ -110,7 +110,7 @@
                             Запись уже открыта!</span>
                         </div>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>215 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
